@@ -1,3 +1,13 @@
+2008-08-24 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b3
+
+ * Change: Unified layout of all admin/tools pages.
+
+ * Removed: function removeInvalidAlbum() as it was redundant.
+
+ * Fix: URL to stats from stats-wizard did not work correct embedded.
+
+ * Fix: Stats from stats-wizard did not work at all in IE6 !!!
+
 2008-08-24 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b2
 
  * Fix: comments_overview_for_all was not working proper.
